[tool.poetry]
name = "ml-training"
version = "0.1.0"
description = ""
authors = ["Masato Naka <masatonaka1989@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"



[tool.poetry.group.dev.dependencies]
ruff = "^0.4.0"



[tool.poetry.group.ray.dependencies]
pyarrow = "15.0.2"
pandas = "2.2.2"


[tool.poetry.group.river.dependencies]
river = "0.15.0"
flask = "2.2.5"


[tool.poetry.group.tensorflow.dependencies]
portpicker = "1.6.0"
tensorflow = "2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
